--- a/Starter_Code/part_2_mars_weather.ipynb
+++ b/Starter_Code/part_2_mars_weather.ipynb
@@ -675,27 +675,7 @@
    "metadata": {},
    "source": [
     "#### Approximate Length of a Martian Year in Earth Days\n",
-    "It looks to be about "
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Atmospheric Pressure\n",
-    "\n",
-    "YOUR ANALYSIS HERE"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Year Length\n",
-    "\n",
-    "YOUR ANALYSIS HERE"
+    "It looks to be about 650 Earth days"
    ]
   },
   {
